<!-- ============================================================================= -->
<!-- ============ THESE CHANGES ARE NOT YET PART OF A STABLE RELEASE ============= -->

--------------------------------------

--------------------------------------

TO BE RELEASED IMMEDIATELY (No need for more testing)
-----------------------------------------------

NOT TO BE RELEASED YET (need more testing)
manu: auto-complete for mak:input (char and ptr)
manu, marius: edit-in-place for mak:input and mak:list ("editable" attribute). Is yet to be finished.

------------------------------------------
- add your changes -

<!-- ============================================================================= -->
<!-- ====================== NOT-TESTED HEAD RELEASES ============================= -->

0.8.2.7.3 27 Mar 2010
rudi: fixing a bug in the reference checker, closing the DB connection
rudi: fixed a bug in the data query servlet - not all columns were displayed correctly; now, displaying all columns that have at least one non-null value
manu: refactoring the SQL query generation and the multiple attribute parametrizer, moving it in the tree-based query analysis and introducing new SQLQueryGenerator interface
manu: disabling automatic reloading of configuration file by apache-commons-cli in the MakumbaINIConfiguration
cristi: hopefuly fixing a lock cause in the new mdd parser

0.8.2.7.2 09 Feb 2010
manu: fixing bug 1163

0.8.2.7.1 03 Feb 2010
manu: fixing broken reference to JSP 2.1 API

0.8.2.7 29 Jan 2010
manu: form submission message also shown for successful response
manu: fixing bug in MDD parser that would prevent overriding of IDD fields in sub-tables (setComplex, ptrOne)
manu: enhancing analysis engine: reporting invalid values for tag attributes can now be handled through AnalysableTag#registerAttributeValues()
manu: improving error reporting: when an error occurs during the analysis or execution of a tag, we fetch the exact line of that tag and display it to the user.