@@ -391,11 +391,11 @@ public class ListOQLTest extends MakumbaJspTestCase {
         assertTrue(compareTest(output));
     }
 
-    public void testMultiParam() throws ServletException, IOException {
-        pageContext.include("list-oql/testMultiParam.jsp");
+    public void testParamMultiple() throws ServletException, IOException {
+        pageContext.include("list-oql/testParamMultiple.jsp");
     }
     
-    public void endMultiParam(WebResponse response) throws Exception {
+    public void endParamMultiple(WebResponse response) throws Exception {
         try {
             output = response.getText(); fetchValidTestResult(output, record);
         } catch (IOException e) {
@@ -415,7 +415,20 @@ public class ListOQLTest extends MakumbaJspTestCase {
             fail("JSP output error: " + response.getResponseMessage());
         }
         assertTrue(compareTest(output));
-    }    
+    }
+    
+    public void testParamRepeatedAssignement() throws ServletException, IOException {
+        pageContext.include("list-oql/testParamRepeatedAssignement.jsp");
+    }
+    
+    public void endParamRepeatedAssignement(WebResponse response) throws Exception {
+        try {
+            output = response.getText(); fetchValidTestResult(output, record);
+        } catch (IOException e) {
+            fail("JSP output error: " + response.getResponseMessage());
+        }
+        assertTrue(compareTest(output));
+    }
 
     
 }
